split the testUser to work on hangman

--- a/public/testUser/index.html
+++ b/public/testUser/index.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <div class="content">
-      time to get to hanging.... I mean guessing...
+      put a user id to send to the server
     </div>
+    <form onsubmit="handleSubmit(event)">
+      <input type="text" name="userIdInput" class="userIdInput" />
+      <button type="submit">test user search</button>
+    </form>
     <script src="scripts.js"></script>
   </body>
 </html>
