hangman structure working (no style yet)

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -6,8 +6,13 @@
   </head>
   <body>
     <div class="content">
-      time to get to hanging.... I mean guessing...
+      Let's Play Hangman Again
     </div>
+    <div class="partialWord">this should get replaced</div>
+    <form onsubmit="handleSubmit(event)">
+      <input type="letter" name="playerInput" class="playerInput" />
+      <div><button type="submit">Guess A Letter!</button></div>
+    </form>
     <script src="scripts.js"></script>
   </body>
 </html>
