completed backend, start of front-end

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+      time to get to hanging.... I mean guessing...
     </div>
+    <form onsubmit="submitLetter(event)">
+      <input type="text" name="submittedLetter" />
+      <button type="submit">Submit Letter</button>
+    </form>
+    <div class="letters"></div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
