ex3 added html and updated css

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
-    <div class="content">
-        time to get to hanging.... I mean guessing...
+    <style></style>
+  </head>
+  <body>
+    <div class="main">
+      <div class="question">
+        <h1>Welcome To the Hangman Game!</h1>
+      </div>
+      <div id="content" class="content"></div>
     </div>
+    <br />
+    <br />
+    <h3>
+      Please enter any letter on your keyboard to start guessing the word above!
+    </h3>
+    <div id="box" class="box"></div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
