--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -6,13 +6,17 @@
   </head>
   <body>
     <div class="content">
-      Let's Play Hangman Again
+      <h4>Let's Play Hangman Again</h4>
+      <div class="partialWord">this should get replaced</div>
+      <div class="playerGuesses">Letters guessed: []</div>
+      <form onsubmit="handleSubmit(event)">
+        <input type="letter" name="playerInput" class="playerInput" />
+        <div>
+          <button class="submit-button" type="submit">Guess A Letter!</button>
+        </div>
+      </form>
     </div>
-    <div class="partialWord">this should get replaced</div>
-    <form onsubmit="handleSubmit(event)">
-      <input type="letter" name="playerInput" class="playerInput" />
-      <div><button type="submit">Guess A Letter!</button></div>
-    </form>
+
     <script src="scripts.js"></script>
   </body>
 </html>
