BE completed, issues with FE

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -9,6 +9,9 @@
     <div class="content">
         time to get to hanging.... I mean guessing...
     </div>
+    <div>
+        
+    </div>
     <script src="scripts.js"></script>
 </body>
 
