--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <style>
     </style>
-    
+    <br>
+    THE HANGMAN GAME
 </head>
 <body>
     <div class="content">
