--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,104 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+      <h1>Hangman</h1>
+      <p>time to get to hanging.... I mean guessing...</p>
+      <div class="infoScreen">
+        <div class="wordStatus"></div>
+        <div class="choosenLetters"></div>
+      </div>
+      <div class="keyboard">
+        <div class="keysRow1">
+          <div data-key="81" class="key">
+            <kbd>Q</kbd>
+          </div>
+          <div data-key="87" class="key">
+            <kbd>W</kbd>
+          </div>
+          <div data-key="69" class="key">
+            <kbd>E</kbd>
+          </div>
+          <div data-key="82" class="key">
+            <kbd>R</kbd>
+          </div>
+          <div data-key="84" class="key">
+            <kbd>T</kbd>
+          </div>
+          <div data-key="89" class="key">
+            <kbd>Y</kbd>
+          </div>
+          <div data-key="85" class="key">
+            <kbd>U</kbd>
+          </div>
+          <div data-key="73" class="key">
+            <kbd>I</kbd>
+          </div>
+          <div data-key="79" class="key">
+            <kbd>O</kbd>
+          </div>
+          <div data-key="80" class="key">
+            <kbd>P</kbd>
+          </div>
+        </div>
+        <div class="keysRow2">
+          <div data-key="65" class="key">
+            <kbd>A</kbd>
+          </div>
+          <div data-key="83" class="key">
+            <kbd>S</kbd>
+          </div>
+          <div data-key="68" class="key">
+            <kbd>D</kbd>
+          </div>
+          <div data-key="70" class="key">
+            <kbd>F</kbd>
+          </div>
+          <div data-key="71" class="key">
+            <kbd>G</kbd>
+          </div>
+          <div data-key="72" class="key">
+            <kbd>H</kbd>
+          </div>
+          <div data-key="74" class="key">
+            <kbd>J</kbd>
+          </div>
+          <div data-key="75" class="key">
+            <kbd>K</kbd>
+          </div>
+          <div data-key="76" class="key">
+            <kbd>L</kbd>
+          </div>
+        </div>
+        <div class="keysRow3">
+          <div data-key="90" class="key">
+            <kbd>Z</kbd>
+          </div>
+          <div data-key="88" class="key">
+            <kbd>X</kbd>
+          </div>
+          <div data-key="67" class="key">
+            <kbd>C</kbd>
+          </div>
+          <div data-key="86" class="key">
+            <kbd>V</kbd>
+          </div>
+          <div data-key="66" class="key">
+            <kbd>B</kbd>
+          </div>
+          <div data-key="78" class="key">
+            <kbd>N</kbd>
+          </div>
+          <div data-key="77" class="key">
+            <kbd>M</kbd>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
