--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -10,7 +10,7 @@
       <p>time to get to hanging.... I mean guessing...</p>
       <div class="infoScreen">
         <div class="wordStatus"></div>
-        <div class="choosenLetters"></div>
+        <div class="gameInfo"></div>
       </div>
       <div class="keyboard">
         <div class="keysRow1">
