--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/otherstyles.css" />
     <style>
     </style>
 </head>
+
 <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+        <div id="mybox">
+            <div id="bigbox">
+                <h1>H A N G M A N</h1>
+            </div>
+            <div id="gallows">
+            </div>
+        </div>>
     </div>
     <script src="scripts.js"></script>
 </body>
