technically complete, the best kind of complete

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -16,6 +16,9 @@
             </div>
             <div id="gallows">
             </div>
+            <div style="margin-top: 30px;">
+                press a key. on, like, your keyboard.
+            </div>
         </div>>
     </div>
     <script src="scripts.js"></script>
