--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
-    <div class="content">
-        time to get to hanging.... I mean guessing...
-    </div>
-    <script src="scripts.js"></script>
-</body>
-
+	<head>
+		<link rel="stylesheet" href="../css/styles.css" />
+		<style></style>
+	</head>
+	<body>
+		<div class="gameContent">
+			<h2>Guess the word</h2>
+			<h3 id="answer"></h3>
+			<h5 id="guesses"></h5>
+		</div>
+		<script src="scripts.js"></script>
+	</body>
 </html>
