--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -10,14 +10,15 @@
     <div class="content">
         <h1>Hangman Game!</h1>
         <div>
-            <h3 id="word"></h3>
-            <h4>Click in a letter below to guess the word.</h4>
-            <p>Mistakes <span id="mistakes"> 0 </span> of <span id="maxWrong"> </span></p>
+            <h3 id="answer"></h3>
+            <h4>Type a letter to guess the word.</h4>
+
+            <h5 id="guesses"></h5>
         </div>
         <div>
             <p id="message"></p>
             <div id="letters"></div>
-            <button onclick="reset()">Reset</button>
+            <button onclick="window.location.reload();">Reset</button>
         </div>
         <script src="scripts.js"></script>
     </div>
