--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="content">
-        <h2>Play</h2>
+        <h2 id="game-title">Play</h2>
         <h3 id="answer"></h3>
         <h4 id="guesses"></h4>
     </div>
