--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+      <h2>Guess the Word!</h2>
+      <h3 id="answer"></h3>
+      <h4>Guesses:</h4>
+      <h4 id="guesses"></h4>
     </div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
