M3-8: Node REST APIs

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
-    <div class="content">
-        time to get to hanging.... I mean guessing...
-    </div>
-    <script src="scripts.js"></script>
-</body>
-
+    <head>
+        <link rel="stylesheet" href="../css/styles.css" />
+        <style></style>
+    </head>
+    <body>
+        <div class="content">
+            <div class="box">
+                <h1>Guess the word</h1>
+                <h2 id="answer"></h2>
+                <h3 id="guesses"></h3>
+            </div>
+        </div>
+        <script src="scripts.js"></script>
+    </body>
 </html>
