--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+        <h2>Guess the word</h2>
+        <h3 id="answer"></h3>
+        <h4>Bad Guesses:</h4>
+        <h4 id="guesses"></h4>
     </div>
     <script src="scripts.js"></script>
 </body>
