Solution_Node8_TD

--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+      <h1>Guess the word.</h1>
+      <h2 id="answer"></h2>
+      <h3 id="guesses"></h3>
     </div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
