--- a/public/hangman/index.html
+++ b/public/hangman/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link rel="stylesheet" href="../css/styles.css" />
-    <style>
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <div class="content">
-        time to get to hanging.... I mean guessing...
+      time to get to hanging.... I mean guessing...
     </div>
+    <h1 id="answer"></h1>
+    <div id="guess"></div>
     <script src="scripts.js"></script>
-</body>
-
+  </body>
 </html>
